# bonde-docs

./: mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: fluxogramas.md  hotmart-checkout.md
docs/fluxos-integracoes/: Dependências e Impactos.md  Fluxo 1 - Enriquecimento de Base AC.md  Fluxo 2 - Gerenciamento de Acesso.md  Fluxo 3 - Ativação de Conta.md  Fluxo 4 - Desativação de Conta.md  Fluxo 5 - Sincronização de Perfil.md  Visão Geral.md
docs/funil-de-vendas/: Etapa 1 – Aquisição e Qualificação Inicial (ActiveCampaign Native).md  Etapa 4 - Venda (Pós-Live).md
docs/roteiro-de-testes/: Perfil Contato (Aluno em potencial).md
