[project]
name = "bonde-docs"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Santos",email = "igr.exe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
