[tool.poetry]
name = "bonde-docs"
version = "0.1.0"
description = ""
authors = ["Igor Santos <igr.exe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
mkdocs = ">=1.6.1,<2.0.0"
mkdocs-material = ">=9.7.6,<10.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
